# isamplesorg.github.io

./: .gitignore  A1_SCOPING.html  A1_SCOPING.md  CANONICAL.html  CANONICAL.md  CNAME  COLLECTION_FACET_CODEX_PROMPT.md  DATA_PROVENANCE.html  DATA_PROVENANCE.md  DESIGN_300.html  DESIGN_300.md  EXPLORER_CLUSTER_URL_PROPOSAL.html  EXPLORER_CLUSTER_URL_PROPOSAL.md  EXPLORER_QUERIES.html  EXPLORER_QUERIES.md  EXPLORER_STATE.html  EXPLORER_STATE.md  FACET_HIERARCHY_PLAN.html  FACET_HIERARCHY_PLAN.md  ISSUE_313_GUIDANCE_2026-07-03.html  ISSUE_313_GUIDANCE_2026-07-03.md  LAZY_LOADING_IMPLEMENTATION.html  LAZY_LOADING_IMPLEMENTATION.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.html  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.html  PERFORMANCE_OPTIMIZATION_PLAN.md  PLAN_305_facet_counts.html  PLAN_305_facet_counts.md  PLAN_PIN_OVERLAY_2026-07-17.html  PLAN_PIN_OVERLAY_2026-07-17.md  README.adoc  README.md  REFACTOR_PLAN_249.html  REFACTOR_PLAN_249.md  REFACTOR_PR4_PLAN.html  REFACTOR_PR4_PLAN.md  SEARCH_INDEX_V1.html  (+49 more)
.claude/: settings.local.json
design/: actors.html  actors.md  index.html  index.qmd  indexbkuqmd  requirements.html  requirements.md
docs/: Makefile
models/: index.html  index.qmd  mapping_sources.html  mapping_sources.md  namespaces.html  namespaces.qmd
notes/: igsn_counts.html
scripts/: build_collections.py  build_frontend_derived.py  build_vocab_labels.py  check_oc_pqg_drift.py  enrich_wide_with_oc_concepts.py  enrich_wide_with_oc_thumbnails.py  generate_geocode_index.py  generate_vocab_docs.sh  generate_vocabs.sh  ingest_oc_records.py  poc_facet_hierarchy.py  profile_queries.py  regen_lite_res46.py  requirements.txt  validate_frontend_derived.py  validate_oc_concept_enrichment.py  vocab2md.py
tests/: README.md  conftest.py  search_baseline_2026-05-08.json  search_fnv1a_regression.json  search_tokenizer_regression.json  test_about_features.py  test_collections.py  test_explorer.py  test_footer_links.py  test_frontend_derived.py  test_globe.py  test_homepage_features.py  test_ingest_oc_records.py  test_key_pages.py  test_navbar_dropdowns.py  test_navigation.py  test_oc_concept_enrichment.py  test_requirements_page.py  test_research_resources.py  test_responsive.py  test_search_index_builder.py  test_search_perf.py  test_search_tokenizer.py  test_smoke.py  test_tutorials_landing.py  test_vocabularies.py
(+112 files in other folders)
