[tool.poetry]
name = "isamplesorg.github.io"
version = "0.1.0"
description = "iSamples Project website"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"
nbsphinx = "^0.7.1"
sphinx-autobuild = "^2020.9.1"
myst-nb = "^0.10.1"
sphinx-book-theme = "^0.0.38"
sphinxcontrib-bibtex = "^1.0.0"
sphinx-togglebutton = "^0.2.2"
sphinx-copybutton = "^0.3.0"
igsn-lib = {git = "https://github.com/isamplesorg/igsn_lib.git", rev = "main"}
numpy = "^1.19.2"
pandas = "^1.1.3"
jupyter-sphinx = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
