[tool.poetry]
name = "isamplesorg.github.io"
version = "0.1.0"
description = "iSamples Project website"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"
nbsphinx = "^0.7.1"
sphinx-autobuild = "^2020.9.1"
myst-nb = "^0.13.1"
sphinx-book-theme = "^0.0.38"
sphinxcontrib-bibtex = "^1.0.0"
sphinx-togglebutton = "^0.2.2"
sphinx-copybutton = "^0.3.0"
sphinxcontrib-plantuml = "^0.22"
sphinxcontrib-drawio = "^0.0.13"
sphinxcontrib-mermaid = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
