[project]
name = "isamplesorg-github-io"
version = "0.5.0"
description = "Documentation for the iSamples project."
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "rdflib>=6.2.0,<7",
    "click>=8.1.3,<9",
    "pandoc-plantuml-filter>=0.1.2,<0.2",
    "graphviz>=0.20.1,<0.21",
    "itables>=1.3.0,<2",
    "requests>=2.28.1,<3",
    "nbformat>=5.9.2,<6",
    "nbclient>=0.8.0,<0.9",
    "jupyter>=1.0.0,<2",
    "anywidget[dev]>=0.7.0,<0.8",
    "matplotlib>=3.8.0,<4",
    "ipyleaflet>=0.17.4,<0.18",
    "mapwidget>=0.1.2,<0.2",
    "pygithub>=2.4.0,<3",
]

[tool.hatch.build.targets.sdist]
include = ["isamplesorg"]

[tool.hatch.build.targets.wheel]
include = ["isamplesorg"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
